--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+/.idea
+/build
 
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+.DS_Store
+/symantecbeat
+/symantecbeat.test
+*.pyc
