--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 language: go
 
 go:
-  - 1.13.3
+  - 1.12.12
 
 os:
   - linux
@@ -38,7 +38,7 @@ install:
   - true
 
 script:
-  - make
+  - make setup
   - mage fmt update
   - make $TARGETS
 
