--- a/_meta/beat.yml
+++ b/_meta/beat.yml
@@ -11,5 +11,8 @@ symantecbeat:
   client_id: "your client id"
   client_sercret: "your client secret"
   batch_size: 1000
-  #start date as period from now.IE now-1h
+  #start date as period from now.IE Default now-1h
   start_date: 1h
+  # 0 for deprecated https://usea1.r3.securitycloud.symantec.com/r3_epmp_i/sccs/v1/events/export endpoint
+  # 1 for https://api.sep.securitycloud.symantec.com/v1/event-search endpoint
+  query_type: 1
